<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:hint="@string/address"
        android:listSelector="@android:color/transparent"
        android:transcriptMode="alwaysScroll" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:inputType="textMultiLine|textNoSuggestions"
            android:windowSoftInputMode="stateHidden" />

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_weight="0.07"
            android:background="@null"
            android:contentDescription="@string/send"
            android:src="@drawable/send_selector" />

        <ImageButton
            android:id="@+id/btSpeak"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_weight="0.06"
            android:background="@null"
            android:contentDescription="@string/btSpeak"
            android:onClick="speak"
            android:src="@drawable/mic_selector" />
    </LinearLayout>

</LinearLayout>